@@ -1,6 +1,7 @@
 python-fll (0.9.13) UNRELEASED; urgency=medium
 
-  * NOT RELEASED YET
+  * bin/fll enhancements
+    - allow setting of hostname
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 14 Apr 2014 00:02:45 +0200
 
